fixed layout of the container

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -7,17 +7,18 @@
     display: flex;
     flex-direction: column;
     margin: 10rem 0 0 6rem;
-    /* background: red; */
     width: 50%;
-    padding: 10rem 0 0 2rem;
+    padding: 2rem 0 0 0;
 }
 
 .heading {
     font-family: Poppins-SemiBold;
+    font-size: 3rem;
 }
 
 .paragraph{
     font-family: Poppins-Regular;
+    font-size: 1.4rem;
 }
 
 
